feat(Water): Add Water effect (to be continued...)
- move Pause text to a TextEntity
- add PauseBehavior to the DemoScene

fix #4